--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
   "name": "cicd-custom",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Custom CI/CD GitHub Action",
+  "private": true,
+  "type": "commonjs",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "ncc build src/index.js -o dist"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/1Ridwan/cicd-custom.git"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/1Ridwan/cicd-custom/issues"
-  },
   "homepage": "https://github.com/1Ridwan/cicd-custom#readme",
+  "engines": {
+    "node": ">=20"
+  },
+  "files": [
+    "dist",
+    "action.yml"
+  ],
   "dependencies": {
     "@actions/core": "^1.11.1"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.1"
   }
 }
